Adjust z-index of OOUI dialog to avoid clipping

--- a/skinStyles/oojs/oojs-ui-windows.less
+++ b/skinStyles/oojs/oojs-ui-windows.less
@@ -132,6 +132,7 @@
 
 	.oo-ui-windowManager-modal > .oo-ui-dialog {
 		background-color: rgba( 0, 0, 0, 0.5 );
+		z-index: 10;
 	}
 
 	.oo-ui-windowManager-modal > .oo-ui-dialog > .oo-ui-window-frame {
